admin ve içeriklere id değerleri ekledim DB'den kodları bunlara göre düzenledim adminAnasayfa php uzantılı olmalı html li olanı kaldırdım yar yaptıktan sonra adminAnasayfa.html'e dönüyordu sildiğimiz için sayfa boş dönüyor onu da düzelttim

--- a/yonetici.html
+++ b/yonetici.html
@@ -12,8 +12,8 @@
     <form action="adminKontrol.php" method="post">
         <table style="margin-left: auto; margin-right: auto; border: 1px solid black;" >
             <tr>
-                <td>Yönetici ID :</td>
-                <td><input type="text" id="adminID" name="adminID"></td>
+                <td>Yönetici İsmi :</td>
+                <td><input type="text" id="adminisim" name="adminisim"></td>
             
             </tr>
             <tr>
